esus christ the Sonic R site is a pain in the ass

--- a/japan/sonicadv_int/index.html
+++ b/japan/sonicadv_int/index.html
@@ -109,7 +109,7 @@ SONIC ADVENTURE International
       </tr>
       <tr>
         <td align="center" colspan=2 bgcolor="red"><font size=2 color="#ffffff"> 
-          | Presented By <b>SONIC TEAM 1999</b> | </font></td>
+         Presented By <b>SONIC TEAM 1999</b></font></td>
       </tr>
     </table>
   </div>
