--- a/japan/sonicr/r/rchara.html
+++ b/japan/sonicr/r/rchara.html
@@ -41,10 +41,10 @@ These are the characters that appear from the beginning. The Grand Prix mode is 
 </td>
 
 <td valign="top">
-The familiar protagonist. His speed is the highest among all characters.<br>
-However, the acceleration and grip performance are inferior, so technique is required.<br>
-He can curl up and spin-dash to achieve even greater speeds.<br>
-He can also jump two steps, so he can jump over large obstacles such as rivers.<br>
+The familiar protagonist. His speed is the highest amongst all of the characters.<br>
+However, the acceleration and grip performance are inferior, so practice is required.<br>
+He can curl up and spin-dash to achieve even greater speed.<br>
+He can also jump twice, so he can jump over large obstacles such as rivers.<br>
 
 </td>
 </tr>
@@ -75,9 +75,9 @@ You can find unexpected shortcuts by jumping two steps.<br>
 
 <td valign="top">
 He admires Sonic, and is always by his side.<br>
-The maximum speed is inferior, but other abilities are relatively high.<br>
+His maximum speed is inferior, but other abilities are relatively high.<br>
 Like Sonic, he can curl up and spin dash.<br>
-He can also take flight by spinning the two tails he has, allowing him to take bold shortcuts.<br>
+He can also take flight by spinning his two tails, allowing him to take bold shortcuts.<br>
 </td>
 </tr>
 <tr>
@@ -85,7 +85,7 @@ He can also take flight by spinning the two tails he has, allowing him to take b
 <b>
 Strategies</b><br>
 Make sure to do a successful spin dash at the start.<br>
-Flight time is surprisingly short. Try to land as often as possible when you can.<br>
+Flight time is surprisingly short. Try to land as often as possible.<br>
 Find a route that utilizes Tails' propeller flight.<br>
 <hr>
 </td>
@@ -118,8 +118,8 @@ He can also glide through the air, and if he glides from a high place, he can st
 <b>
 Strategies</b><br>
 Make sure to do a successful spin dash at the start.<br>
-Glide from high places. Particularly useful on roads with heavy ups and downs.<Br>
-Higher turning performance enables more stable cornering than Sonic.<br>
+Glide from high places. Particularly useful on roads with ups and downs.<Br>
+Higher turning speed enables more stable cornering than Sonic.<br>
 <hr>
 </td>
 </tr>
@@ -141,18 +141,18 @@ Higher turning performance enables more stable cornering than Sonic.<br>
 <td valign="top">
 The only female character.<br>
 She participates in races in an all-purpose car that Tails had modified for her.<br>
-The top speed is low, but the acceleration is good and the character is suitable for beginners.<br>
+Her top speed is low, but acceleration is good and the character is suitable for beginners.<br>
 Her car is all-purpose, thus, it can travel on water.<br>
-If you use Turbo Dash, you can go at high speed for a certain period of time.<br>
+If you use a Turbo Dash, you can go at high speed for a certain period of time.<br>
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
 Strategies</b><br>
-○ スタート時にはターボダッシュが必須。<Br>
-○ 地上を走っていては勝負には勝てない。水面を大胆にショートカットしよう。<Br>
-○ ターボダッシュの使い方が勝負の決め手。むやみに使ってタイムロスをしないように。<Br>
+The Turbo Dash is required at the start.<Br>
+You can't win the race by driving on the ground. Take a daring shortcut through the water.<Br>
+The use of the Turbo Dash is the decisive factor in the race. Do not use it unecessarily, else you'll wind up losing time.<Br>
 <hr>
 </td>
 </tr>
@@ -161,7 +161,7 @@ Strategies</b><br>
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>ドクター・エッグマン</b><br>
+<b>Dr. Robotnik</b><br>
 </font>
 </td>
 </tr>
@@ -172,36 +172,36 @@ Strategies</b><br>
 </td>
 
 <td valign="top">
-悪の天才科学者。お馴染みのエッグモービルに乗って参戦。<br>
-また宙に浮いているため、旋回能力が非常に高く、水上走行も可能である。<br>
-エッグマンは爆弾を投げることができるので、他のプレイヤーを攻撃することも可能。<br>
-【出現方法】グランプリモードの５つ全てのコースで優勝すると、キャラセレクト画面で選択可能になる。<br>
+An evil scientific genius. He participates in the game by riding the familiar Egg Mobile.<br>
+Also, because it floats in the air, it has very high turning speed and can fly above water.<br>
+Robotnik can throw bombs, so he can also attack other players.<br>
+When you win all five courses in Grand Prix mode, you can select the character on the character select screen.<br>
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
-攻略のポイント</b><br>
-○ 旋回能力が非常に高いので、曲がりすぎに注意。<br>
-○ 水上飛行能力をフルに活用しよう。<br>
-○ とにかく巨体のエッグマン。Ｚボタンを押して、コースの先を見やすくしよう。<br>
+Strategies</b><br>
+Be careful not to turn too much, because the turning speed is very high.<br>
+Make full use of your water flight capabilities.<br>
+Press the Z button to get a better view of the course ahead.<br>
 <hr>
 </td>
 </tr>
 
 <tr>
 <td colspan="2">
-● <b>かくれキャラクター</b><p>
+<b>Hidden Characters</b><p>
 
-ある条件を満たすと出現するキャラクターです。<br>
-うまく使いこなせば、強力なプレイヤーになることでしょう。<p>
+These are characters that appear when certain conditions are met.<br>
+If you use them well, you'll become a powerful player.<p>
 </td>
 </tr>
 
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>メタルソニック</b><br>
+<b>Metal Sonic</b><br>
 </font>
 </td>
 </tr>
@@ -212,22 +212,22 @@ Strategies</b><br>
 </td>
 
 <td valign="top">
-ソニックを超えるパワーとスピードを目指して、エッグマンが開発した秘密兵器。<br>
-最高速こそソニックと同等だが、加速力ではソニックをも凌ぐ。<br>
-ただし、圧倒的パワーにより旋回能力が劣るため、操るにはかなりのテクニックが必要。<br>
+A secret weapon developed by Robotnik in order to surpass Sonic's power and speed.<br>
+He has the same top speed as Sonic, but his acceleration is superior to Sonic's.<br>
+However, due to it's overwhelming power, its turning ability is inferior, so it requires a great deal of practice to control it.<br>
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
-【出現条件】</b><br>
-グランプリモードの"ＲＥＳＯＲＴ ＩＳＬＡＮＤ"でトークンを５枚集め、４位以内でゴールするとメタルソニックとの一騎打ちが始まる。<br>
-この試合に勝利すると、キャラセレクト画面で選択可能になる。<p>
+Unlock Conditions</b><br>
+Collect five tokens in the Grand Prix mode in the Resort Island course. You need to finish in the top four, and then you will be able to battle Metal Sonic.<br>
+If you win the match, you'll unlock Metal Sonic.<p>
 <b>
-攻略のポイント</b><br>
-○ 旋回能力が低い。曲がれない時は迷わず減速しよう。<br>
-○ 勢いがあれば、慣性による水上走行が可能。水に落ちても慌てずに。<br>
-○ ２段ジャンプはできないが、１回のジャンプ力はソニックより上。<br>
+Strategies</b><br>
+Turning speed is low. If you can't turn, don't hesitate to slow down.<br>
+If you have enough momentum, you can run on water. Don't panic if you fall into the water.<br>
+He can't double jump, but he can do a better jump than Sonic.<br>
 <hr>
 </td>
 </tr>
@@ -235,7 +235,7 @@ Strategies</b><br>
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>メタルナックルズ</b><br>
+<b>Metal Knuckles</b><br>
 </font>
 </td>
 </tr>
@@ -246,21 +246,21 @@ Strategies</b><br>
 </td>
 
 <td valign="top">
-ソニック同様、エッグマンにとって邪魔な存在であるナックルズを倒すために用意した秘密兵器。<br>
-メタルソニックの動力装置を流用しているため、最高速と加速力はバツグン，<br>
-ナックルズ同様、高い場所から滑空飛行する事もできる。<br>
+Like Sonic, Robotnik has prepared a secret weapon to defeat Knuckles, who is a hindrance to him<br>
+Since it uses Metal Sonic's power unit, it has excellent top speed and acceleration,<br>
+and like Knuckles, it can glide from high places.<br>
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
-【出現条件】</b>
-グランプリモードの"ＲＥＡＣＴＩＶＥ　ＦＡＣＴＯＲＹ"でトークンを５枚集め、４位以内でゴールするとメタルナックルズとの一騎打ちが始まる。<br>この試合に勝利すると、キャラセレクト画面で選択可能になる。<p>
+Unlock Conditions</b>
+Collect five tokens in the Grand Prix mode in the Reactive Factory course. You need to finish in the top four, and then you will be able to battle Metal Knuckles.<br>If you win the match, you'll unlock Metal Knuckles.<p>
 <b>
-攻略のポイント</b><br>
-○ 旋回能力が低い。曲がれない時は迷わず減速しよう。<br>
-○ 勢いがあれば、慣性による水上走行が可能。水に落ちても慌てずに。<br>
-○ 高い場所からイッキにショートカットを目指そう。<br>
+Strategies</b><br>
+Turning speed is low. If you can't turn, don't hesitate to slow down.<br>
+If you have enough momentum, you can run on water. Don't panic if you fall into the water.<br>
+Glide from a high place.<br>
 <hr>
 </td>
 </tr>
@@ -268,7 +268,7 @@ Strategies</b><br>
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>エッグマンロボ</b><br>
+<b>Egg Robo</b><br>
 </font>
 </td>
 </tr>
