we're getting there!

--- a/japan/sonicr/r/rchara.html
+++ b/japan/sonicr/r/rchara.html
@@ -280,9 +280,9 @@ Glide from a high place.<br>
 
 <td valign="top">
 
-メタルをも凌駕する最強のロボットを目指してエッグマンが制作したロボット。<br>
-しかし、空気抵抗を無視したコミカルなボディのおかげで、当初予定していた実力は発揮できず…。<br>
-それでもメタルソニックに匹敵するスピード力と、エッグマン譲りの攻撃力を誇る。
+A robot by Robotnik with the goal of becoming the strongest one, even surpassing Metal Sonic.<br>
+However, thanks to the comical body that ignores aerodynamic drag, it was not able to demonstrate its originally planned capabilities...<br>
+Still, it boasts speed comparable to Metal Sonic's, as well as attack power similar to Robotnik's.
 
 
 </td>
@@ -290,15 +290,15 @@ Glide from a high place.<br>
 <tr>
 <td colspan="2">
 <b>
-【出現条件】</b>
-グランプリモードの"ＲＥＧＡＬ　ＲＵＩＮ"でトークンを５枚集め、４位以内でゴールするとエッグマンロボとの一騎打ちが始まる。<br>
-この試合に勝利すると、キャラセレクト画面で選択可能になる。
+Unlock Conditions</b>
+Collect five tokens in the Grand Prix mode in the Regal Ruin course. You need to finish in the top four, and then you will be able to battle Egg Robo.<br>
+If you win the match, you'll unlock Egg Robo.
 <p>
 <b>
-攻略のポイント</b><br>
-○ 旋回能力が低い。ＬＲボタンを有効に使ってコーナーを切り抜けよう。<br>
-○ 水上ではイッキに減速してしまう。急いで地上に戻ろう。<br>
-○ 体がでかいエッグマンロボ。コースの先が見え難いときは、Ｚボタンを押して視点を変えよう。<br>
+Strategies</b><br>
+Use the L and R buttons to get around corners.<br>
+You'll slow down quickly if you're on water. Stay on the ground as much as you can.<br>
+Robotnik's robot is big. If you can't see where you're going, press the Z button to change your perspective.<br>
 <hr>
 </td>
 </tr>
@@ -306,7 +306,7 @@ Glide from a high place.<br>
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>テイルスドール</b><br>
+<b>Tails Doll</b><br>
 </font>
 </td>
 </tr>
@@ -318,9 +318,9 @@ Glide from a high place.<br>
 
 <td valign="top">
 
-ソニックを油断させ、攻撃するために作られたエッグマン苦肉の策。<br>
-頭部に動力装置を埋め込み、それ以外は単なるぬいぐるみという貧弱な姿をしているが、軽量設計のためレースではかなりの実力を発揮する。<br>
-また、長時間空中を浮遊する事も出来る。
+Robotnik's bitter plan to catch Sonic off guard and attack him.<br>
+It has a power unit embedded in its head, and other than that, it looks like a poorly made stuffed animal, but its lightweight design makes it quite capable in racers.<br>
+It can also float in the air for long periods of time.
 
 
 </td>
@@ -328,15 +328,15 @@ Glide from a high place.<br>
 <tr>
 <td colspan="2">
 <b>
-【出現条件】</b>
-グランプリモードの"ＲＡＤＩＣＡＬ　ＣＩＴＹ"でトークンを５枚集め、４位以内でゴールするとテイルスドールとの一騎打ちが始まる。<br>
-この試合に勝利すると、キャラセレクト画面で選択可能になる。
+Unlock Conditions</b>
+Collect five tokens in the Grand Prix mode in the Regal Ruin course. You need to finish in the top four, and then you will be able to battle Egg Robo.<br>
+If you win the match, you'll unlock Tails Doll.
 <p>
 <b>
-攻略のポイント</b><br>
-○ フワフワした操作感覚に慣れよう。<br>
-○ 水上でもまったく減速することなく走る？ことができる唯一のキャラ。<br>
-○ ジャンプボタンを押し続ければ、浮遊し続ける事ができる。<br>
+Strategies</b><br>
+Get used to the fluffy feel of the controls.<br>
+The only character who can float above water without slowing down at all.<br>
+If you hold down the jump button, you'll keep floating.<br>
 <hr>
 </td>
 </tr>
@@ -344,7 +344,7 @@ Glide from a high place.<br>
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>スーパーソニック</b><br>
+<b>Super Sonic</b><br>
 </font>
 </td>
 </tr>
@@ -356,23 +356,23 @@ Glide from a high place.<br>
 
 <td valign="top">
 
-カオスエメラルドのパワーによって、潜在能力が引き出された最強のソニック。<br>
-圧倒的な加速力と最高速を誇る、まさに最強最速のキャラクター。
+The power of the Chaos Emeralds has brought out the absolute strongest Sonic.<br>
+With his overwhelming acceleration and top speed, it is truly the strongest and fastest character.
 
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
-【出現条件】</b>
-グランプリモードの"ＲＡＤＩＡＮＴ　ＥＭＥＲＡＬＤ"を除いた４つのコースで、７つのカオスエメラルドを集めると、キャラセレクト画面で選択可能になる。<br>
-ただしカオスエメラルドは、レースで１位を取らないと入手できない。
+Unlock Conditions</b>
+In Grand Prix mode, collect all seven Chaos Emeralds.<br>
+However, Chaos Emeralds can only be obtained by getting first place in a race.
 <p>
 <b>
-攻略のポイント</b><br>
-○ とにかくスピードが速い。まずはその速さに慣れること。<br>
-○ 全てにおいて優れたスーパーソニックだが、最速時のコーナーリングは困難。<br>
-○ 最速ゆえに、少しのコントロールミスが致命的となる。不安な時は減速しよう。<br>
+Strategies</b><br>
+Anyway, his speed is very high. You have to get used to the speed.<br>
+Super Sonic is excellent in every way, but cornering at high speed is difficult.<br>
+Because he's the fastest, the slightest mistake can be fatal. Slow down if you need to.<br>
 <hr>
 </td>
 </tr>
