--- a/japan/sonicr/r/screen.html
+++ b/japan/sonicr/r/screen.html
@@ -8,9 +8,9 @@
 </tr>
 <tr>
 <td align="right" bgcolor="gray">
-<font color="white"><font size=2>ＴＧＳバージョン</font>
+<font color="white"><font size=2>TGS Version</font>
 <b>
-スクリーンショット</b></font>
+Screenshots</b></font>
 
 </td>
 </tr>
@@ -21,7 +21,7 @@
 Resort Island</b><br>
 </font>
 <font size=+1><b>
-リゾート アイランド
+Resort Island
 </b></font>
 </td>
 </tr>
@@ -40,7 +40,7 @@ Resort Island</b><br>
 Radical City</b><br>
 </font>
 <font size=+1><b>
-ラジカル シティ
+Radical City
 </b></font>
 </td>
 </tr>
