--- a/sonichq/qa/FAQ.htm
+++ b/sonichq/qa/FAQ.htm
@@ -1,21 +1,31 @@
 <html>
-<header>
+<head>
 <title>Sonic FAQ</title>
-</header>
-
-<body bgcolor=000000 text=4B1FFC link=white vlink=white>
-
 <style>
 <!-- A{text-decoration:none}   -->
 <!--a:hover { color: #7FFF00} -->
 </style>
+</head>
 
-<p align=center><table width=100% border=1 cellspacing=0 bordercolorlight=blue bordercolordark=23238E>
+<body bgcolor=000000 text=3366ff link=white vlink=white><center>
+
+<IFRAME SRC="https://web.archive.org/20011208000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011208000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+</SCRIPT>
+<NOSCRIPT>
+<A HREF="https://web.archive.org/20011208000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011208000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
+</NOSCRIPT>
+</IFRAME>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011208000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
+
+
+<p><table width=100% border=1 cellspacing=0 bordercolorlight=blue bordercolordark=23238E>
 <tr>
-<td><center><img src="/sonichq/emuzone/qa/qatop.jpg" align=left alt="Sonic Q&A Logo"></center></td>
+<td><center><img src="/sonichq/qa/qatop.jpg" align=left alt="Sonic Q&A Logo"></center></td>
 <td>
 <center><font face="Verdana" size=-1>
-Welcome to the <b>FAQ</b> section of <font color="orange">Sonic HQ's</font> <b>Q&A</b> Page! This is where you can find answers to common Sonic questions. Please read these answers before sending your question to <a href="mailto:sonichq@yahoo.com">Q&A.</a>  You might find the answer here instead.
+Welcome to the <b>FAQ</b> section of <font color="orange">Sonic HQ's</font> <b>Q&A</b> Page! This is where you can find answers to common Sonic questions. Please read these answers before sending your question to <a href="mailto:sonicqa@hotmail.com">Q&A.</a>  You might find the answer here instead.
 </font></center></td>
 </tr>
 </table>
@@ -48,22 +58,9 @@ Anchor links were added.
 <a href=#satamcancel>Cancellation</a><br>
 <a href=#season3>3rd Season / Movie</a>
 <td>
-<a href=#dcrelease>DC Release</a><br>
+<a href=#shadow>Shadow **SPOILER**</a><br>
 <a href=#ages>Character Ages</a><br>
 </table>
-
-<!--
-<p><table width=100% bgcolor=000000 border=1 cellspacing=0 bordercolorlight=blue bordercolordark=23238E><td><font face=Verdana>
-<a href=#carnivalnight>Carnival Night Barrel</a><br>
-<a href=#mystery>Mystery Zones/Games</a>
-</font></td></table>
--->
-
-<!-- SONIC EXCHANGE-->
-<font color="4B1FFC">
-<P ALIGN=CENTER><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/" target="whole"><IMG SRC="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/selogo.gif" HEIGHT=40 WIDTH=40 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?advert=NonSSI&page=03" target="whole"><IMG SRC="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?ID=sonichq&page=03" HEIGHT=40 WIDTH=400 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><BR><SMALL><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/">Sonic Exchange - Sonic The Hedgehog Banner Exchange!</A></SMALL></P> 
-</font>
-<!-- END SONIC EXCHANGE -->
 
 <a name=carnivalnight>
 <p><table width=100% border=1 cellspacing=0 bordercolorlight=blue bordercolordark=23238E>
@@ -84,9 +81,7 @@ This is definitely the #1 trouble spot in any Sonic game.  Jump on the barrel an
 How can I get to the Hidden Palace Zone in Sonic 2?  Or the Wood Zone, or the Neo Green Hill Zone, or the Dust Hill Zone?<p>Do you have any Sonic Arcade Info?
 </font>
 <p>
-The Hidden Palace Zone is the most famous of several zones that were removed from Sonic 2.  It was apparently removed late in Sonic 2's development, because it appeared often in gaming magazines and promotions before the game was released.  We don't really know why the zones were taken out, but it probably had to do with keeping the game on schedule or saving cartridge space.<p>
-There should soon be info about them on the Gaming Info page (might even be there as you're reading this).  Another source is <a href="https://web.archive.org/20011101000000/http://www.emulationzone.org/sections/sonic/secret/" target="whole">Secrets of Sonic the Hedgehog.</a>  Pro Action Replay stuff and other hacks for playing Hidden Palace can be found at <a href=https://web.archive.org/20011101000000/http://www.angelfire.com/sc/SonicTheHedge/ target=whole>Tom's Sonic and NiGHTS Page.</a><p>
-<a href=https://web.archive.org/20011101000000/http://www.ellensburg.com/~katharin/index2.html target=whole>SonicLand</a> has all the info I have been able to find on the net about Sonic Arcade.
+The Hidden Palace Zone is the most famous of several zones that were removed from Sonic 2.  It was apparently removed late in Sonic 2's development, because it appeared often in gaming magazines and promotions before the game was released.  We don't really know why the zones were taken out, but it probably had to do with keeping the game on schedule or saving cartridge space.
 </font></td></table>
 
 <a name=musiccds>
@@ -98,11 +93,11 @@ Where can I get Sonic Music CDs?
 </font>
 <p>Thanks to <a href="mailto:mightyray@earthlink.net">Ray</a> for this info.<p>
 
-The Sonic Adventure Original Soundtrack (2 CDs, 69 tracks) can be found at <a href=https://web.archive.org/20011101000000/http://www.gamecave.com>Game Cave</a> for $32.99!<p>
+The Sonic Adventure Original Soundtrack (2 CDs, 69 tracks) can be found at <a href=https://web.archive.org/20011208000000/http://www.gamecave.com>Game Cave</a> for $32.99!<p>
 
-The Sonic Adventure "Songs With Attitude" CD (the character themes) is for sale at <a href=https://web.archive.org/20011101000000/http://www.gamemusic.com>Game Music Online</a> for $28.99.<p>
+The Sonic Adventure "Songs With Attitude" CD (the character themes) is for sale at <a href=https://web.archive.org/20011208000000/http://www.gamemusic.com>Game Music Online</a> for $28.99.<p>
 
-Virtual Sonic is available for $5.97 at <a href=https://web.archive.org/20011101000000/http://www.cdnow.com>CDNow</a>.<p>
+Virtual Sonic is available for $5.97 at <a href=https://web.archive.org/20011208000000/http://www.cdnow.com>CDNow</a>.<p>
 
 Info for other CDs coming soon.
 </font></td></table>
@@ -114,19 +109,13 @@ Info for other CDs coming soon.
 <p><font color="red">
 Where can see the Sonic cartoons or get videos of them?
 </font>
-<p>Sonic Underground is already being shown in Europe.  It's not on the air in the US because the cartoon has been bought by Bohbot Kids Network.  BKN is selling 2 syndicated "all-or-nothing" blocks of programming in August/September, and SU is part of one of these blocks.
+<p>AoStH ("Adventures Of Sonic The Hedgehog," the syndicated spoof cartoon that prremiered in 1993) is still running on <a href=https://web.archive.org/20011208000000/http://disney.go.com/disneychannel/toondisney/schedule.html>Toon Disney</a> and some independent local channels. Tapes can sometimes be found at Wal-Mart or Blockbuster.
 
-<p>Toon Disney and some independent local channels show AoStH.  As far as we know, SatAM is not being broadcast anywhere at this time.
+<p>As far as we know, SatAM ("Sonic The Hedgehog," the dramatic ABC Saturday Morning cartoon that premiered in 1993) is not being broadcast anywhere at this time.  However, it is available on VHS and DVDs are confirmed to be in the works.
 
-<p>It's very difficult to find SatAM on tape, but AoStH is easier to get.  Both can sometimes be found at Wal-Mart or Blockbuster.
+<p>Sonic Underground (the syndicated fantasy cartoon, which premiered in 1999) is not currently available either on the air or on video, as far as we know.
 
-<p>An English-translated Sonic Anime is supposed to come out in September.  We do have reports of one person buying it in Michigan, but the company that is making the video says September.
-
-<p>You can get RealVideo versions of SatAM at <a href=https://web.archive.org/20011101000000/http://www.sirnex.com target=whole>Sir NEXCOM</a>, <a href="https://web.archive.org/20011101000000/http://starhedgehog.simplenet.com" target="whole">Star Hedgehog's Page</a>, or <a href="https://web.archive.org/20011101000000/http://members.spree.com/SIP/soneec/" target="whole">Sonic Pandemonium</a>.  Star Hedgehog also has the Sonic Anime. <a href=https://web.archive.org/20011101000000/http://segasonic.simplenet.com>SegaSonic.Net</a> has the AoStH videos.
-
-<p><a href=https://web.archive.org/20011101000000/http://members.xoom.com/SonicTheHedg/>Tom's Sonic and NiGHTS Page</a> has a ton of Sonic Underground pics, sounds, and episode summaries.
-
-<p>Please be aware that we don't run these sites and that the videos may occasionally become temporarily unavailable.  If you have a problem, try again later.
+<p>The Sonic Anime ("Sonic The Hedgehog," released in Japan in 1996) was translated to English and released internationally as "Sonic The Movie."  You can probably find it at Suncoast.
 </font></td></table>
 
 <a name=ages>
@@ -152,7 +141,7 @@ Sally is 16 in the SatAM cartoon, but 15 in the comics.  Elias' age is unknown, 
 Julie-Su's age of 15 is unconfirmed right now.<br>
 Amy is 10 in the comics, and seems to be in her early teens according to SoA.  It's rumored that she'll also be a teenager in Sonic Adventure.  However, 8 is still the age given by SoJ.<p>
 
-Tails was first revealed to the public as 4 and a half, and that was the age used in gaming magazines, in AoStH, and on the plush toy's box.  However, the SatAM cartoon depicted him as a 10-year-old, and the Fleetway version of Tails is a teenager.  Somewhere along the line, SEGA changed their minds about his age too.  He's listed as 8 in Sonic Jam, and that seems to be the current age given by SoJ.
+According to Sonic Team and Sega Of Japan, Tails is 8.  Tails was first revealed to the public by Sega Of America as 4 and a half, and that was the age used in gaming magazines, in AoStH, and on the plush toy's box, but they changed this claim when Sonic Team listed his age in the Saturn game Sonic Jam.  However, the SatAM cartoon depicted him as a 10-year-old, and the Fleetway version of Tails is a teenager.
 </font></td></table>
 
 <a name=strictsega>
@@ -187,15 +176,14 @@ I read something about a 3rd season for SatAM.  Can you give me information abou
 You can find out more info on the cancelled 3rd season on the <a href="/sonichq/cartoon/" target="whole">Cartoon Info Page</a>.  In short, the red eyes seen in the 2nd season finale belonged to Naugus, who would soon take over Robotropolis and make Robotnik his Snively-like assistant.  Snively would be kicked out and join the Freedom Fighters.  I think that Snively becoming a Freedom Fighter would have led to some very interesting situations and plenty of chances for character development.
 </font></td></table>
 
-<a name=dcrelease>
+<a name=shadow>
 <p><table width=100% border=1 cellspacing=0 bordercolorlight=blue bordercolordark=23238E>
 <td><font face="Verdana" size=-1>
-<b>Sonic Adventure and Dreamcast Release</b><br>
-<p><font color="red">
-Will DC be released in May?  Will SA be a pack-in?
+<b>Shadow In SA2</b><br>
+<p><font color="red">**SPOILER**<br>
+Did Shadow die in SA2?
 </font>
-<p>DC will most likely not come out in May. Sega isn't stupid enough to repeat a Saturn.  Besides, if it was coming in May, we probably would have seen a lot more hype by now.  The DC is still officially scheduled for September 9th.
-<p>SA will probably not be a pack-in, because selling the system alone allows Sega to advertise a lower price.  Yes, it would probably be cheaper for the consumer and possibly Sega too, but having a lower price associated with your system is important.  The same thing happened with Mario 64, even though Nintendo actually sold just as many copies of Mario 64 as they did N64 systems.  This is one of the many illogical things about marketing :).
+<p>Only Sonic Team can answer that, but I'd say yes.  Shadow could have gotten out with Chaos Control, but I really don't see any reason for Sonic Team to do that.  For one thing, he's a total Sonic clone.  Unless they do the "rivalry" theme again, which I doubt they will, there wouldn't really be any point to making Shadow playable unless they made his gameplay radically different from Sonic's.
 </font></td></table>
 
 <a name=lineage>
@@ -250,5 +238,5 @@ All Sonic and related characters are trademarks of Service and Games Enterprise.
 </font></td></table>
 
 </body>
+</center>
 </html>
-
